--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -14,7 +14,11 @@ common.tours = Tours
 common.area = Areas
 common.domestic = Domestic
 common.foreign = Foreign
+common.welcome = Welcome you to
+common.account = Account
 
+# text
+text.custom_book_header = Book tours according to customer wishes
 
 # form
 form.email.holder = Enter your email here
@@ -86,3 +90,5 @@ form.register.other = or register with
 form.login = Login
 form.login.description = Welcome you to our website !
 form.login.other = or log in with
+
+form.logout = Log out
