--- a/src/main/resources/messages_vi.properties
+++ b/src/main/resources/messages_vi.properties
@@ -14,6 +14,11 @@ common.tours = Tours
 common.area = Khu vực
 common.domestic = Trong nước
 common.foreign = Ngoài nước
+common.welcome = Chào mừng bạn đến với
+common.account = Tài khoản
+
+# text
+text.custom_book_header = Đặt tour theo mong muốn khách hàng
 
 # form
 form.email.holder = Nhập email của bạn
@@ -84,3 +89,5 @@ form.error.existed = Trường này đã được sử dụng
 form.login = Đăng nhập
 form.login.description = Chào mừng bạn đến với website của chúng tôi !
 form.login.other = hoặc đăng nhập với
+
+form.logout = Đăng xuất
