--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,9 +1,69 @@
 # common
 common.viewMore = Xem thêm
+common.description = Chi tiết
+common.schedule = Lịch trình
+common.perPerson = mỗi người
+common.adults = Người lớn
+common.children = Trẻ em
+common.babies = Em bé
+common.location = Địa điểm
+common.filter = Lọc
+common.hotel = Khách sạn
+common.flight = Chuyến bay
+common.tours = Tours
+common.area = Khu vực
+common.domestic = Trong nước
+common.foreign = Ngoài nước
+common.account = Tài khoản
 
-# error
-error.empty = Không được để trống
-error.length = Tối thiểu 5 ký tự
+# form
+form.email.holder = Nhập email của bạn
+
+form.name.label = Họ và tên
+form.name.holder = Nhập họ và tên của bạn
+
+form.phone.label = Số điện thoại
+form.phone.holder = Nhập số điện thoại của bạn
+
+form.password.label = Mật khẩu
+form.password.holder = Nhập mật khẩu của bạn
+
+form.departureDate.label = Ngày khởi hành
+
+form.birthday.label = Ngày sinh
+
+form.address.label = Địa chỉ
+form.address.holder = Nhập địa chỉ của bạn
+
+form.duration.label = Số ngày du lịch
+form.duration.holder = Nhập số ngày của bạn
+
+form.description.label = Mô tả (nếu có)
+form.description.holder = Nhập mô tả của bạn
+
+form.confirm.label = Xác nhận mật khẩu
+form.confirm.holder = Nhập lại mật khẩu của bạn
+
+form.remember = Ghi nhớ đăng nhập
+form.forget = Quên mật khẩu
+
+form.number.label = Số lượng
+form.number.holder = Nhập số lượng
+
+form.search.label = Tìm kiếm
+form.search.holder = Nhập từ khóa
+
+form.price.label = Khoảng giá
+form.price.from = Từ giá
+form.price.to = Đến giá
+
+form.submit.label = Xác nhận
+
+form.error.empty = Không được để trống
+form.error.length = Tối thiểu 5 ký tự
+form.error.match = Mật khẩu không khớp
+form.error.login = Tài khoản hoặc mật khẩu không chính xác
+form.error.checkbox = Không được để trống
 
 # navigator
 nav.select = Chọn ngôn ngữ
@@ -13,3 +73,15 @@ nav.hotel= khách sạn
 nav.flight = Chuyến bay
 nav.domestic = Tour trong nước
 nav.international = Tour nước ngoài
+nav.logout = Đăng xuất
+
+# Register
+form.register = Đăng ký
+form.register.description = Chào mừng bạn đến với website của chúng tôi !
+form.register.other = hoặc đăng ký với
+form.error.existed = Trường này đã được sử dụng
+
+# Log in
+form.login = Đăng nhập
+form.login.description = Chào mừng bạn đến với website của chúng tôi !
+form.login.other = hoặc đăng nhập với
